--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_tb-megamenu-big-button.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_tb-megamenu-big-button.scss
@@ -11,8 +11,8 @@ $iconList : (
 'has-icon-innovation' : ('icon-innov-browse-41-54-blue', 'icon-innov-browse-41-54-darkblue' ),
 'has-icon-add' : ('icon-innov-add-32-32-blue', 'icon-innov-add-32-32-darkblue' ),
 'has-icon-innovator' : ('icon-innov-collaborate-56-56-blue', 'icon-innov-collaborate-56-56-darkblue' ),
-'has-icon-funding' : ('icon-fund-browse-54-54-blue', 'icon-fund-browse-54-54-darkblue' ),
-'has-icon-resources' : ('icon-resources-browse-54-54-blue', 'icon-resources-browse-54-54-darkblue' ),
+'has-icon-funding' : ('icon-fund-browse-52-52-blue', 'icon-fund-browse-52-52-darkblue' ),
+'has-icon-resources' : ('icon-resources-browse-52-52-blue', 'icon-resources-browse-52-52-darkblue' ),
 
 );
 
@@ -37,14 +37,14 @@ $iconList : (
   }
 &:before {
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: left center;
   display: block;
   content: "\a0";
   position: absolute;
   height: 54px;
   left: -#{$tb-icon-padding};
   top: 1px;
-  width: 40px;
+  width: $tb-icon-padding;
 }
 
 &:after {
@@ -77,12 +77,14 @@ $iconList : (
 //Add addtional class names and icons to $iconList variable
 @each $iconList, $iconName in $iconList {
     .#{$iconList}:before {
-      @include svg-background(nth($iconName, 1));
+      @include svg-background(nth($iconName, 2));
+      opacity: 0.6;
     }
     .#{$iconList}:focus:before,
     .#{$iconList}:hover:before,
     .#{$iconList}:active:before {
       @include svg-background(nth($iconName, 2));
+      opacity: 1;
     }
 
 }
@@ -94,14 +96,26 @@ $iconList : (
     height: 32px;
     left: -#{$tb-icon-padding - 3px};
     top: 13px;
-    width: 32px;
   }
   &.has-icon-innovator:before {
     left: -#{$tb-icon-padding + 6px};
     height: 56px;
-    width: 56px;
+    width: $tb-icon-padding + 6px;
     top: 0;
   }
+  &.has-icon-resources:before {
+    left: -#{$tb-icon-padding + 8px};
+    height: 56px;
+    width: $tb-icon-padding + 8px;
+    top: 0;
+  }
+  &.has-icon-funding:before {
+    left: -#{$tb-icon-padding + 8px};
+    height: 56px;
+    width: $tb-icon-padding + 8px;
+    top: 0;
+  }
+
 }
 
 
