--- a/public/sites/all/themes/gesso/css/no-mq.css
+++ b/public/sites/all/themes/gesso/css/no-mq.css
@@ -3974,7 +3974,7 @@ header.header {
   position: relative;
   text-align: left;
   text-transform: uppercase;
-  max-width: 16.5em;
+  max-width: 22.5em;
 }
 /* line 30, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button:focus, .tb-megamenu-big-button:hover {
@@ -4013,21 +4013,17 @@ header.header {
   height: 150%;
   width: 0;
 }
+/* line 55, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+.tb-megamenu-big-button:last-child {
+  margin-bottom: 0;
+}
 
-/* line 58, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 61, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .lt-ie9 .tb-megamenu-big-button {
-  width: 264px;
-}
-/* line 62, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
-.tb-megamenu-item--funding .tb-megamenu-big-button {
-  max-width: 22.5em;
-}
-/* line 66, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
-.lt-ie9 .tb-megamenu-item--funding .tb-megamenu-big-button {
   width: 360px;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-innovation:before {
   transition: opacity 0.2s linear;
   background-image: url('../images/bg/icon-innov-browse-41-54-darkblue.png');
@@ -4036,14 +4032,14 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 80, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-innovation:focus:before,
 .has-icon-innovation:hover:before,
 .has-icon-innovation:active:before {
   opacity: 1;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-add:before {
   transition: opacity 0.2s linear;
   background-image: url('../images/bg/icon-innov-add-32-32-darkblue.png');
@@ -4052,14 +4048,14 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 80, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-add:focus:before,
 .has-icon-add:hover:before,
 .has-icon-add:active:before {
   opacity: 1;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-innovator:before {
   transition: opacity 0.2s linear;
   background-image: url('../images/bg/icon-innov-collaborate-56-56-darkblue.png');
@@ -4068,14 +4064,14 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 80, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-innovator:focus:before,
 .has-icon-innovator:hover:before,
 .has-icon-innovator:active:before {
   opacity: 1;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-funding:before {
   transition: opacity 0.2s linear;
   background-image: url('../images/bg/icon-fund-browse-52-52-darkblue.png');
@@ -4084,14 +4080,14 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 80, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-funding:focus:before,
 .has-icon-funding:hover:before,
 .has-icon-funding:active:before {
   opacity: 1;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-resources:before {
   transition: opacity 0.2s linear;
   background-image: url('../images/bg/icon-resources-browse-52-52-darkblue.png');
@@ -4100,34 +4096,34 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 80, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-resources:focus:before,
 .has-icon-resources:hover:before,
 .has-icon-resources:active:before {
   opacity: 1;
 }
 
-/* line 92, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 85, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button.has-icon-add:before {
   height: 32px;
   left: -72px;
   top: 13px;
 }
-/* line 97, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 90, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button.has-icon-innovator:before {
   left: -81px;
   height: 56px;
   width: 81px;
   top: 0;
 }
-/* line 103, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 96, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button.has-icon-resources:before {
   left: -83px;
   height: 56px;
   width: 83px;
   top: 0;
 }
-/* line 109, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 102, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button.has-icon-funding:before {
   left: -83px;
   height: 56px;
@@ -4135,11 +4131,11 @@ header.header {
   top: 0;
 }
 
-/* line 120, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 113, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu .dropdown-menu .tb-megamenu-big-button {
   padding: 1.2em;
 }
-/* line 123, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 116, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button + .tb-megamenu-big-button {
   margin-left: 75px;
 }
