--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
@@ -44,18 +44,6 @@
     }
   }
 
-  .nav__link--parent,
-  .nav__header {
-    //padding: 0.75em 44px 0.75em 1em;
-    //[dir="rtl"] & {
-    //  padding: 0.75em 1em 0.75em 44px;
-    //}
-    //&.is-open {
-    //  background: $mobile-submenu-fallback-bg-color;
-    //  background: $mobile-submenu-bg-color;
-    //}
-  }
-
   .nav__header {
     background-color: transparent;
     border: 0;
@@ -110,8 +98,6 @@
   .nav--subnav,
   .nav--lvl2subnav,
   .nav__toggler {
-    //background: $mobile-submenu-fallback-bg-color;
-    //background: $mobile-submenu-bg-color;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -119,16 +105,10 @@
     .nav__item {}
 
     .nav__link {
+      @include hyphens(none);
       break-word: normal;
       color: $mobile-submenu-text-color;
-      min-width: em(190px, 16px);
       padding-left: 2em;
-      word-wrap: normal;
-      overflow-wrap:normal;
-      -moz-hyphens: none;
-      -webkit-hyphens: none;
-      -ms-hyphens: none;
-      hyphens: none;
       &:focus,
       &:hover,
       &:active {
