--- a/public/sites/all/themes/gesso/css/styles.css
+++ b/public/sites/all/themes/gesso/css/styles.css
@@ -4269,23 +4269,24 @@ header.header {
   }
 }
 
-/* line 19, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 18, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button {
   background: #7090b7;
   border: 0;
   font-size: 0.9375em;
   margin-left: 75px;
-  padding: 1.13333em;
+  min-width: 280px;
+  max-width: 380px;
+  padding: 16px 35px 16px 16px !important;
   position: relative;
   text-align: left;
   text-transform: uppercase;
-  max-width: 22.5em;
 }
-/* line 30, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 31, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button:focus, .tb-megamenu-big-button:hover {
   background: #003359;
 }
-/* line 34, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 36, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button:before {
   background-repeat: no-repeat;
   background-position: left center;
@@ -4297,7 +4298,7 @@ header.header {
   top: 1px;
   width: 75px;
 }
-/* line 46, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 48, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button:after {
   height: 16px;
   overflow: hidden;
@@ -4309,7 +4310,7 @@ header.header {
   display: inline-block;
   position: absolute;
   right: 10px;
-  top: 19px;
+  top: 18px;
 }
 /* line 14, ../sass/partials/global/helpers/_image-replace.scss */
 .tb-megamenu-big-button:after:before {
@@ -4318,17 +4319,17 @@ header.header {
   height: 150%;
   width: 0;
 }
-/* line 55, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 57, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button:last-child {
   margin-bottom: 0;
 }
 
-/* line 61, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 63, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .lt-ie9 .tb-megamenu-big-button {
-  width: 360px;
+  width: 380px;
 }
 
-/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 72, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-innovation:before {
   -moz-transition: opacity 0.2s linear;
   -o-transition: opacity 0.2s linear;
@@ -4340,14 +4341,14 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 77, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-innovation:focus:before,
 .has-icon-innovation:hover:before,
 .has-icon-innovation:active:before {
   opacity: 1;
 }
 
-/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 72, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-add:before {
   -moz-transition: opacity 0.2s linear;
   -o-transition: opacity 0.2s linear;
@@ -4359,14 +4360,14 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 77, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-add:focus:before,
 .has-icon-add:hover:before,
 .has-icon-add:active:before {
   opacity: 1;
 }
 
-/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 72, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-innovator:before {
   -moz-transition: opacity 0.2s linear;
   -o-transition: opacity 0.2s linear;
@@ -4378,14 +4379,14 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 77, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-innovator:focus:before,
 .has-icon-innovator:hover:before,
 .has-icon-innovator:active:before {
   opacity: 1;
 }
 
-/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 72, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-funding:before {
   -moz-transition: opacity 0.2s linear;
   -o-transition: opacity 0.2s linear;
@@ -4397,14 +4398,14 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 77, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-funding:focus:before,
 .has-icon-funding:hover:before,
 .has-icon-funding:active:before {
   opacity: 1;
 }
 
-/* line 70, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 72, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-resources:before {
   -moz-transition: opacity 0.2s linear;
   -o-transition: opacity 0.2s linear;
@@ -4416,34 +4417,34 @@ header.header {
   opacity: 0.6;
 }
 
-/* line 75, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 77, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .has-icon-resources:focus:before,
 .has-icon-resources:hover:before,
 .has-icon-resources:active:before {
   opacity: 1;
 }
 
-/* line 85, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 87, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button.has-icon-add:before {
   height: 32px;
   left: -72px;
   top: 13px;
 }
-/* line 90, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 92, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button.has-icon-innovator:before {
   left: -81px;
   height: 56px;
   width: 81px;
   top: 0;
 }
-/* line 96, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 98, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button.has-icon-resources:before {
   left: -83px;
   height: 56px;
   width: 83px;
   top: 0;
 }
-/* line 102, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 104, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button.has-icon-funding:before {
   left: -83px;
   height: 56px;
@@ -4451,11 +4452,7 @@ header.header {
   top: 0;
 }
 
-/* line 113, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
-.tb-megamenu .dropdown-menu .tb-megamenu-big-button {
-  padding: 1.2em;
-}
-/* line 116, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
+/* line 118, ../sass/partials/components/nav/_tb-megamenu-big-button.scss */
 .tb-megamenu-big-button + .tb-megamenu-big-button {
   margin-left: 75px;
 }
