--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/03-navigation/01-main-menu@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/03-navigation/01-main-menu@inprogress.mustache
@@ -6,9 +6,9 @@
         <a href="#"> About </a>
       </li>
       <!-- INNOVATIONS -->
-      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--innovations dropdown">
+      <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--innovations dropdown">
         <a href="#"> Innovations </a>
-        <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+        <div class="tb-megamenu-submenu dropdown-menu mega-align-center mega-dropdown-menu nav-child">
           <div class="mega-dropdown-inner">
             <div class="tb-megamenu-row row-fluid">
               <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
@@ -29,7 +29,7 @@
         </div>
       </li>
       <!-- FUNDING -->
-      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
+      <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--funding dropdown">
         <a href="#"> Funding </a>
         <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
           <div class="mega-dropdown-inner">
@@ -51,7 +51,7 @@
         </div
       </li>
       <!-- RESOURCES -->
-      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
+      <li class="tb-megamenu-item level-1 mega mega-align-center tb-megamenu-item--resources dropdown">
         <a href="#"> Resources </a>
         <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
           <div class="mega-dropdown-inner">
