--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_quotes.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_quotes.scss
@@ -16,9 +16,9 @@ q {
 	border-bottom:1px solid $red;
   color:$red;
   display: block;
-	width: 75%;
   font-size: $font-size-lg;
   font-style: italic;
-  margin: 0 auto;
+  margin: .5em auto;
 	text-align: center;
+	width: 75%;
 }
