--- a/public/sites/all/themes/gesso/css/no-mq.css
+++ b/public/sites/all/themes/gesso/css/no-mq.css
@@ -2958,7 +2958,7 @@ input.throbbing {
 /* line 1, ../sass/partials/components/_footer-simple.scss */
 .footer-simple {
   background: #e1e4e6;
-  box-shadow: 0px 5px 5px -2px black inset;
+  box-shadow: 0px 5px 5px -2px rgba(0, 0, 0, 0.5) inset;
   color: #363f46;
   padding: 1em 0;
 }
