--- a/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
@@ -1,8 +1,10 @@
 .site-name {
-  left: 10px; // offset layout-constrain padding
-  position: absolute;
-  top: 12px;
-  z-index: 3;
+  .region-navigation & {
+    left: 10px; // offset layout-constrain padding
+    position: absolute;
+    top: 12px;
+    z-index: 3;
+  }
 }
 
 .site-name__link {
