--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/02-drupal/login-form@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/02-drupal/login-form@inprogress.mustache
@@ -1,4 +1,4 @@
-<div class="block">
+<div class="block block--login-form">
   <form>
     <div class="form-item form-type-textfield form-item-name">
       <input type="text" class="form-text is-required" maxlength="60" size="50" placeholder="USERNAME">
