--- a/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
@@ -1,11 +1,11 @@
 #user-register-form {
-  border: 2px solid #cecfcb;
-  @include box-shadow(0 2px 4px 2px rgba(0, 0, 0, 0.15));
+  // border: 2px solid #cecfcb;
+  // @include box-shadow(0 2px 4px 2px rgba(0, 0, 0, 0.15));
   max-width: 750px;
   margin: 1em auto 2em auto;
   overflow: hidden;
   padding: 2em;
-  
+
   #edit-lr-social-login-links {
     &:after {
       @include hyphens(none);
@@ -26,7 +26,7 @@
   }
 
   h2 {
-    margin: 1.5em 0 0.75em 0; 
+    margin: 1.5em 0 0.75em 0;
   }
 
   .button--submit {
