--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--welcome-page--info.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--welcome-page--info.scss
@@ -3,7 +3,14 @@
 
 
 .pane--welcome-page-info {
-  padding-top: 85px;
+  margin-top: em(40px, 16px);
+
+  @include breakpoint(700px , $no-query: true) {
+    margin-bottom: em(80px, 16px);
+    margin-top: em(80px, 16px);
+    padding-left: 4%;
+    padding-right: 4%;
+  }
   h1 {
     color: #fff;
     font-weight: 400;
