--- a/public/sites/all/themes/gesso/sass/partials/components/_header-simple.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_header-simple.scss
@@ -3,7 +3,5 @@
   background: #00111F;
   background: rgba(0,0,0,0.5);
   border-bottom: 1px solid #fff;
-  .block {
-    float: right;
-  }
+  padding-top: em(30px, 16px);
 }
