--- a/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
@@ -14,5 +14,10 @@
 
   .site-name--simple & {
     @include svg-background(logo-simple);
+    margin-bottom: em(18px, 16px);
+    @include breakpoint(700px , $no-query: true) {
+      float: left;
+    }
+
   }
 }
