--- a/public/sites/all/themes/gesso/sass/partials/layout/panels/_split.scss
+++ b/public/sites/all/themes/gesso/sass/partials/layout/panels/_split.scss
@@ -11,6 +11,7 @@
     &.first.second {
       .l-first {
         @include grid-span(6,1);
+        margin-right: 0;
       }
       .l-second {
         @include grid-span(6,7);
@@ -26,7 +27,7 @@
   .l-second,
   .l-wrapper {
     @include clearfix;
-    
+
     @if $panels-admin {
       @include border-box;
     }
