[#4119] Styling updates for header for welcome pages

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-04-header-simple/02-organisms-00-regions-04-header-simple.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-04-header-simple/02-organisms-00-regions-04-header-simple.mustache
@@ -1,6 +1,6 @@
-&lt;header class=&quot;header-simple&quot; role=&quot;banner&quot;&gt;
+&lt;header class=&quot;header&quot; role=&quot;banner&quot;&gt;
   &lt;div class=&quot;layout-constrain&quot;&gt;
-    {{&gt; atoms-site-name-simple }}
-    {{&gt; molecules-login-form }} 
+    {{&gt; atoms-site-name }}
+    {{&gt; molecules-login-form }}
   &lt;/div&gt;
 &lt;/header&gt;
