--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/00-regions/04-header-simple@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/00-regions/04-header-simple@inprogress.mustache
@@ -1,6 +1,6 @@
-<header class="header-simple" role="banner">
+<header class="header" role="banner">
   <div class="layout-constrain">
-    {{> atoms-site-name-simple }}
-    {{> molecules-login-form }} 
+    {{> atoms-site-name }}
+    {{> molecules-login-form }}
   </div>
 </header>
