--- a/public/sites/all/themes/gesso/sass/partials/components/_header.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_header.scss
@@ -6,4 +6,17 @@ header.header {
     display: block;
   }
   padding: 0.5em 0;
+
+  .page-simple & {
+    @extend %clearfix;
+    background: #00111F;
+    background: rgba(0,0,0,0.5);
+    border-bottom: 1px solid #fff;
+    padding-top: em(30px, 16px);
+  }
+
 }
+
+
+
+
